Show related geo names in admin lists
